--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,43 +5,34 @@ on:
 
 jobs:
   setup-vps:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
 
     steps:
-      - name: Install SSH and Set Up User
+      - name: Install SSH and Set Password
         run: |
-          sudo apt update && sudo apt install -y openssh-server curl jq
+          sudo apt update && sudo apt install -y openssh-server curl
           sudo service ssh start
 
-          # Create a new user 'myuser'
-          sudo useradd -m -s /bin/bash myuser
-          sudo mkdir -p /home/myuser/.ssh
-          sudo chmod 700 /home/myuser/.ssh
+          # Set a password for the 'runner' user
+          echo "runner:MySecurePass123" | sudo chpasswd
 
-      - name: Generate SSH Key Pair
-        run: |
-          ssh-keygen -t rsa -b 4096 -f /home/myuser/.ssh/id_rsa -N ""
-          sudo cp /home/myuser/.ssh/id_rsa.pub /home/myuser/.ssh/authorized_keys
-          sudo chmod 600 /home/myuser/.ssh/authorized_keys
-          sudo chown -R myuser:myuser /home/myuser/.ssh
+          # Allow password authentication in SSH
+          sudo sed -i 's/^#PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
+          sudo sed -i 's/^#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+          sudo systemctl restart ssh
 
-      - name: Install and Configure Ngrok
+      - name: Start Ngrok Tunnel for SSH
         run: |
           curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
           sudo apt update && sudo apt install ngrok -y
 
-          # Authenticate Ngrok
+          # Start Ngrok tunnel for SSH
           ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
-
-      - name: Start Ngrok Tunnel for SSH
-        run: |
-          nohup ngrok tcp 22 --log=stdout > ngrok.log 2>&1 &
+          nohup ngrok tcp 22 --log=stdout > ngrok.log &
 
       - name: Display SSH Connection Info
-        run: |
-          sleep 10  # Wait for Ngrok to start
-          curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url' || echo "Ngrok tunnel not found"
-        
-      - name: Output SSH Private Key
-        run: cat /home/myuser/.ssh/id_rsa
+        run: sleep 10 && curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+
+      - name: Keep Runner Alive
+        run: sleep infinity
